data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_2675.wast
;; 6. **Test Description**: Define a `block` that includes a `br_table` where the index is dynamically calculated and could overflow to the default branch.    - **Constraint**: Ensure that dynamic indices resulting in overflow are managed correctly and that the block execution flow handles these without errors.    - **Edge Case**: Handling of dynamic, potentially overflowing indices ensuring default branch resolution works.

(assert_invalid
  (module (func $dynamic-br-table-overflow
    (block $outer (result i32)
      (i32.const 1)
      (i32.const 2)
      (i32.const 0xFFFFFF)
      (br_table 0 1 $outer)
    )
  ))
  "index out of bounds"
)